--- a/css/seller.css
+++ b/css/seller.css
@@ -469,3 +469,13 @@ textarea {
 #submit-all-btn:hover {
   background-color: #d14e85;
 }
+
+#backToHome {
+  color: var(--primary-color);
+  text-align: center;
+  transition: color .2s ease-in-out;
+}
+
+#backToHome:hover {
+  color: #d14e85;
+}
